feat: 상위 7개 종목 감정 점수 출력